// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`daily data works 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Date",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "last_refreshed": "Date",
  "output_size": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`daily_adjusted data works 1`] = `
Object {
  "data": Array [
    Object {
      "adjusted_close": "Float",
      "close": "Float",
      "date": "Date",
      "dividend_amount": "Float",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "split_coefficient": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "last_refreshed": "Date",
  "output_size": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`exchangeTimeSeries data works 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Timestamp",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "interval": "Interval",
  "last_refreshed": "Timestamp",
  "output_size": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`exchangeTimeSeries_adjusted data works 1`] = `
Object {
  "data": Array [
    Object {
      "adjusted_close": "Float",
      "close": "Float",
      "date": "Date",
      "dividend_amount": "Float",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "split_coefficient": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "last_refreshed": "Date",
  "output_size": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`intraday data works 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Timestamp",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "interval": "Interval",
  "last_refreshed": "Timestamp",
  "output_size": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`monthly data works 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Date",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`monthly_adjusted data works 1`] = `
Object {
  "data": Array [
    Object {
      "adjusted_close": "Float",
      "close": "Float",
      "date": "Date",
      "dividend_amount": "Float",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`quote quote data works 1`] = `
Object {
  "change": "Float",
  "change_percent": "String",
  "close": null,
  "date": "Date",
  "high": "Float",
  "low": "Float",
  "open": "Float",
  "previous_close": "Float",
  "price": "Float",
  "symbol": "String",
  "volume": "Float",
}
`;

exports[`search search works 1`] = `
Array [
  Object {
    "currency": "String",
    "marketclose": "String",
    "marketopen": "String",
    "matchscore": "Float",
    "name": "String",
    "region": "String",
    "symbol": "String",
    "timezone": "String",
    "type": "String",
  },
]
`;

exports[`weekly data works 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Date",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`weekly_adjusted data works 1`] = `
Object {
  "data": Array [
    Object {
      "adjusted_close": "Float",
      "close": "Float",
      "date": "Date",
      "dividend_amount": "Float",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`weekly_adjusted data works 2`] = `
Object {
  "data": Array [
    Object {
      "adjusted_close": "Float",
      "close": "Float",
      "date": "Date",
      "dividend_amount": "Float",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_zone": "String",
}
`;
